--- a/signin.html
+++ b/signin.html
@@ -126,11 +126,14 @@
 				<div class="col-lg-7">
 					<div class="contact_form_container">
 						<div class="contact_title" style="text-align: center">Sign In</div>
-						<form action="#" id="contact_form" class="contact_form" >
-							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Email" required="required" data-error="Subject is required.">
-							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Password" required="required" data-error="Subject is required." type="password">
-							<button type="submit" id="form_submit_button" class="form_submit_button button">Sign In<span></span><span></span><span></span></button>
+						<form action="#"  >
+							<label>Email</label>
+							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter Email" required="required" data-error="Subject is required.">
+							<label>Password</label>
+							<input id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter Password" required="required" data-error="Subject is required." type="password">
+							<button type="submit" id="form_submit_button" class="form_submit_button button">Login<span></span><span></span><span></span></button>
 						</form>
+						<p>Don't have an account? <a href="signup.html">Sign up</a></p>
 					</div>
 				</div>
 			</div>
