--- a/signup.html
+++ b/signup.html
@@ -125,19 +125,23 @@
 				</div>
 				<div class="col-lg-7">
 					<div class="contact_form_container">
-						<div class="contact_title" style="text-align: center">Sign Up</div>
-						<form action="#" id="contact_form" class="contact_form" >
-							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="First Name" required="required" data-error="Subject is required.">
-							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Last Name" required="required" data-error="Subject is required.">
-							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Email" required="required" data-error="Subject is required.">
+						<div class="contact_title">Sign Up</div>
+
+						<form action="#"  >
+							<label>First Name</label>
+							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter First Name" required="required" data-error="Subject is required.">
+							<label>Last Name</label>
+							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter Last Name" required="required" data-error="Subject is required.">
+							<label>Email</label>
+							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter Email" required="required" data-error="Subject is required.">
 							<button type="submit" id="form_submit_button" class="form_submit_button button">Sign up<span></span><span></span><span></span></button>
 						</form>
+						<p>Already have an acccount? <a href="signin.html">Login</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<!-- Footer -->
 
 	<!-- Footer -->
