added about us section

--- a/index.html
+++ b/index.html
@@ -236,40 +236,20 @@
 								<div>Where are you leaving from?</div>
 								<select name="children" id="children_1" class="dropdown_item_select search_input">
 									<option>--select--</option>
-									<option>Abia</option>
-									<option>Abuja</option>
-									<option>Akwa Ibom</option>
-									<option>Anambra</option>
-									<option>Benin</option>
-									<option>Calabar</option>
-									<option>Enugu</option>
-									<option>Ibadan</option>
-									<option>Ijebu Ode</option>
-									<option>Imo</option>
 									<option>Lagos</option>
-									<option>Kogi</option>
+									<option>Abuja</option>
+									<option>Benin</option>
 									<option>Porthacourt</option>
-									<option>Warri</option>
 								</select>
 							</div>
 							<div class="search_item">
 								<div>Where are you going to?</div>
 								<select name="children" id="children_1" class="dropdown_item_select search_input">
 									<option>--select--</option>
-									<option>Abia</option>
-									<option>Abuja</option>
-									<option>Akwa Ibom</option>
-									<option>Anambra</option>
-									<option>Benin</option>
-									<option>Calabar</option>
-									<option>Enugu</option>
-									<option>Ibadan</option>
-									<option>Ijebu Ode</option>
-									<option>Imo</option>
 									<option>Lagos</option>
-									<option>Kogi</option>
+									<option>Abuja</option>
+									<option>Benin</option>
 									<option>Porthacourt</option>
-									<option>Warri</option>
 								</select>
 							</div>
 							<div class="search_item">
@@ -298,40 +278,20 @@
 								<div>Where are you leaving from?</div>
 								<select name="children" id="children_1" class="dropdown_item_select search_input">
 									<option>--select--</option>
-									<option>Abia</option>
-									<option>Abuja</option>
-									<option>Akwa Ibom</option>
-									<option>Anambra</option>
-									<option>Benin</option>
-									<option>Calabar</option>
-									<option>Enugu</option>
-									<option>Ibadan</option>
-									<option>Ijebu Ode</option>
-									<option>Imo</option>
 									<option>Lagos</option>
-									<option>Kogi</option>
+									<option>Abuja</option>
+									<option>Benin</option>
 									<option>Porthacourt</option>
-									<option>Warri</option>
 								</select>
 							</div>
 							<div class="search_item">
 								<div>Where are you going to?</div>
 								<select name="children" id="children_1" class="dropdown_item_select search_input">
 									<option>--select--</option>
-									<option>Abia</option>
-									<option>Abuja</option>
-									<option>Akwa Ibom</option>
-									<option>Anambra</option>
-									<option>Benin</option>
-									<option>Calabar</option>
-									<option>Enugu</option>
-									<option>Ibadan</option>
-									<option>Ijebu Ode</option>
-									<option>Imo</option>
 									<option>Lagos</option>
-									<option>Kogi</option>
+									<option>Abuja</option>
+									<option>Benin</option>
 									<option>Porthacourt</option>
-									<option>Warri</option>
 								</select>
 							</div>
 							<div class="search_item">
@@ -544,7 +504,7 @@
 						<!-- Image by https://unsplash.com/@dnevozhai -->
 						<div class="intro_item_background" style="background-image:url(images/Abuja-Image.jpg)"></div>
 						<div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
-							<div class="intro_date">Lagos to Abuja</div>
+							<div class="intro_date">Lagos to Abuja <br> Abuja to Lagos</div>
 							<div class="button intro_button"><div class="button_bcg"></div><a href="#popup" id="showPopUp">Book Now<span></span><span></span><span></span></a></div>
 						</div>
 					</div>
@@ -558,7 +518,8 @@
 						<!-- Image by https://unsplash.com/@hellolightbulb -->
 						<div class="intro_item_background" style="background-image:url(images/Porthacourt-Image.jpg)"></div>
 						<div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
-							<div class="intro_date">Lagos to Porthacourt</div>
+							<div class="intro_date">Lagos to Porthacourt<br>
+							Porthacourt to Lagos</div>
 							<div class="button intro_button" onclick="document.getElementById('modal-wrapper').style.display='block'"><div class="button_bcg"></div><a href="#">Book Now<span></span><span></span><span></span></a></div>
 						</div>
 					</div>
@@ -572,7 +533,7 @@
 						<!-- Image by https://unsplash.com/@willianjusten -->
 						<div class="intro_item_background" style="background-image:url(images/Aba-image.png)"></div>
 						<div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
-							<div class="intro_date">Lagos to Aba</div>
+							<div class="intro_date">Lagos to Aba <br> Aba to Lagos</div>
 							<div class="button intro_button"><div class="button_bcg"></div><a href="#">Book Now<span></span><span></span><span></span></a></div>
 						</div>
 					</div>
@@ -748,6 +709,52 @@
 		</div>
 	</div>
 	<!-- Footer -->
+
+
+	<div class="offers">
+		<div class="container">
+			<div class="row offers_items">
+
+				<!-- Offers Item -->
+				<div class="col-lg-12 offers_col">
+					<div class="offers_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="offers_image_container">
+									<!-- Image by https://unsplash.com/@kensuarez -->
+									<div class="offers_image_background" style="background-image:url(images/signIn.jpg)"></div>
+									
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="offers_content">
+									<div class="offers_price">About Us</div>
+										
+									</div>
+									<p class="offers_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									<div class="offers_icons">
+										<ul class="offers_icons_list">
+											<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="images/sailboat.png" alt=""></li>
+										</ul>
+									</div>
+									<div class="offers_link"><a href="#" style="color:#0d0d5d">Contact Us</a></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>	
+			</div>
+		</div>
+	</div>
+
 
 	<footer class="footer">
 		<div class="container">
