added contact us page

--- a/index.html
+++ b/index.html
@@ -756,6 +756,42 @@
 	</div>
 
 
+	<!-- Home -->
+
+	
+	<div class="contact">
+		<div class="contact_background" style="background-image:url(images/contact.png)"></div>
+
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-5">
+					<div class="contact_image">
+						
+					</div>
+				</div>
+				<div class="col-lg-7">
+					<div class="contact_form_container">
+						<div class="contact_title">Contact Form</div>
+
+						<form action="#"  >
+							<label>Name</label>
+							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter Name" required="required" data-error="Subject is required.">
+							<label>Email</label>
+							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter Email" required="required" data-error="Subject is required.">
+							<label>Phone Number (Optional)</label>
+							<input type="Number" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Enter Phone Number" required="required" data-error="Subject is required.">
+							<label>Message</label>
+							<textarea id="contact_form_message" class="text_field contact_form_message" name="message" rows="4" placeholder="Write us a message" required="required" data-error="Please, write us a message."></textarea>
+							<button type="submit" id="form_submit_button" class="form_submit_button button">Submit<span></span><span></span><span></span></button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Footer -->
+
+
 	<footer class="footer">
 		<div class="container">
 			<div class="row">
