added almost all fields

--- a/index.html
+++ b/index.html
@@ -756,7 +756,35 @@
 	</div>
 
 
-	<!-- Home -->
+	<!-- CTA -->
+
+	<div class="cta">
+		<!-- Image by https://unsplash.com/@thanni -->
+		<div class="container">
+			<div class="row">
+				<div class="col">
+
+					<!-- CTA Slider -->
+
+					<div class="cta_slider_container">
+						<div class="owl-carousel owl-theme cta_slider">
+
+							<!-- CTA Slider Item -->
+							<div class="owl-item cta_item text-center">
+								<div class="cta_title">Corporate Leasing Service</div>
+								<p class="cta_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec. Proin bibendum, augue faucibus tincidunt ultrices, tortor augue gravida lectus, et efficitur enim justo vel ligula.</p>
+								<div class="button cta_button"><div class="button_bcg"></div><a href="#">book now<span></span><span></span><span></span></a></div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+		</div>
+					
+	</div>
+
 
 	
 	<div class="contact">
@@ -789,6 +817,8 @@
 			</div>
 		</div>
 	</div>
+
+	
 	<!-- Footer -->
 
 
