added leasings service emoji

--- a/index.html
+++ b/index.html
@@ -522,11 +522,11 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/cars.jpg" alt=""></div>
+									<div class="test_image"><img src="images/cars1.jpg" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
-												<div class="test_name">Pickup Service</div>
+												<div class="test_name">Corporate Leasing</div>
 												<div class="test_date"></div>
 											</div>
 											<div class="test_quote_title"></div>
